[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attn-kv-bench"
version = "0.2.0"
description = "Benchmark for MHA, GQA, and MLA attention with KV cache strategies."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
kvbench = "kvbench.__main__:main"

[tool.setuptools]
packages = ["kvbench"]
